# jose-app

./: .gitignore  Makefile  README.md  install_pyenv.sh  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: server.py
services/: model_syncer.py
src/: app.py
